--- a/res/layout/send_pic.xml
+++ b/res/layout/send_pic.xml
@@ -19,5 +19,5 @@
             android:layout_height="wrap_content"
             android:id="@+id/imageView" android:layout_gravity="center_horizontal"/>
 
-
+    <SurfaceView android:layout_width="match_parent" android:layout_height="match_parent" android:id="@+id/surface_view"/>
 </LinearLayout>
